--- a/src/index.scss
+++ b/src/index.scss
@@ -5,16 +5,20 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    max-width: 960px;
+    max-width: 1000px;
     margin: 1rem auto;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .content {
+    max-width: 1000px;
+    flex-direction: column;
+    display: flex;
     position: relative;
-        z-index: 2;
-        color: #fff;
+    z-index: 2;
+    color: #fff;
+    justify-content: center;
 }
 
 .background {
@@ -52,7 +56,7 @@ h1 {
     border-radius: 15%;
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 20px;
+    margin: 15px;
 }
 
 .img-block:hover {
@@ -74,4 +78,60 @@ h1 {
 .PlayAndPause {
     width: 80px;
     height: 80px;
+}
+
+.inputVolume {
+    -webkit-appearance: none;
+    width: 250px;
+    margin: 20px auto;
+    border-radius: 10px;
+}
+
+.inputVolume {
+    --range: calc(var(--max) - var(--min));
+    --ratio: calc((var(--value) - var(--min)) / var(--range));
+    --sx: calc(0.5 * 2em + var(--ratio) * (100% - 2em));
+}
+
+.inputVolume::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 2em;
+    height: 2em;
+    border-radius: 1em;
+    background: #007cf8;
+    border: none;
+    box-shadow: 0 0 2px black;
+    margin-top: calc(max((1em - 1px - 1px) * 0.5, 0px) - 2em * 0.5);
+}
+
+.inputVolume::-webkit-slider-runnable-track {
+    height: 1em;
+    border-radius: 10px;
+    background: #efefef;
+    box-shadow: none;
+}
+
+.inputVolume::-webkit-slider-thumb:hover {
+    background: #0061c3;
+}
+
+.inputVolume:hover::-webkit-slider-runnable-track {
+    border-radius: 10px;
+    background: #e5e5e5;
+}
+
+.inputVolume::-webkit-slider-thumb:active {
+    background: #2f98f9;
+}
+
+.inputVolume::-webkit-slider-runnable-track {
+    background: linear-gradient(#007cf8, #007cf8) 0/var(--sx) 100% no-repeat, #efefef;
+}
+
+.inputVolume:hover::-webkit-slider-runnable-track {
+    background: linear-gradient(#0061c3, #0061c3) 0/var(--sx) 100% no-repeat, #e5e5e5;
+}
+
+.inputVolume:active::-webkit-slider-runnable-track {
+    background: linear-gradient(#2f98f9, #2f98f9) 0/var(--sx) 100% no-repeat, #f5f5f5;
 }
